[MR2-625] Remove the set line-height and height of the title and domain to prevent clipping of the text. Also adjust the history dots layout to keep the sizing consistent with the domain row. r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D127138

--- a/browser/components/companion/content/components/river.css
+++ b/browser/components/companion/content/components/river.css
@@ -86,6 +86,4 @@ view-group[top] {
   padding-inline-start: 12px;
 }
 
-view-group[top]::part(title) {
-  font-size: 1.25rem;
 }
